fix history log overflow hidden

--- a/web/home.css
+++ b/web/home.css
@@ -155,4 +155,5 @@ footer #statusIcon.active {
     font-size: 1rem;
     color: white;
     text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
+    overflow-y: scroll;
 }
